--- a/x11/Makefile
+++ b/x11/Makefile
@@ -63,6 +63,7 @@
 #    SUBDIR += tvtwm
     SUBDIR += unclutter
 #    SUBDIR += viewfax
+    SUBDIR += windowmaker
 #    SUBDIR += wm2
 #    SUBDIR += x3270
 #    SUBDIR += xalarm
