--- a/x11/xplot/Makefile
+++ b/x11/xplot/Makefile
@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile,v 1.1 1997/12/11 01:50:52 thorpej Exp $
+#	$NetBSD: Makefile,v 1.2 1997/12/11 22:08:44 agc Exp $
 #
 # Packages collection Makefile for: xplot
 # Version required: 0.90
@@ -7,7 +7,7 @@
 
 DISTNAME=	xplot-0.90
 CATEGORIES=	x11
-MASTER_SITES=	ftp://mercury.lcs.mit.edu:/pub/shep/
+MASTER_SITES=	ftp://mercury.lcs.mit.edu/pub/shep/
 
 GNU_CONFIGURE=	yes
 
