--- a/archivers/rar/Makefile
+++ b/archivers/rar/Makefile
@@ -4,13 +4,14 @@
 # Date created:         15 May 1996
 # Whom:                 ache
 #
-# $NetBSD: Makefile,v 1.3 1997/11/18 12:43:40 agc Exp $
+# $NetBSD: Makefile,v 1.4 1997/12/13 21:31:00 hubertf Exp $
 # FreeBSD Id: Makefile,v 1.7 1997/08/10 22:31:27 fenner Exp 
 #
 
 DISTNAME=       rarbsd
 PKGNAME=        rar-2.01
 CATEGORIES=	archivers
+ONLY_FOR_ARCHS=	i386
 MASTER_SITES=   ftp://ftp.inetpros.net/pub/rar/ \
 		ftp://ftp.kiarchive.ru/pub/unix/arcers/
 EXTRACT_SUFX=   .exe
