--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.4 1997/11/20 13:22:14 agc Exp $
+# $NetBSD: Makefile,v 1.5 1997/12/14 01:42:58 agc Exp $
 # FreeBSD Id: Makefile,v 1.53 1997/09/28 13:25:40 markm Exp
 #
 
-#    SUBDIR += ImageMagick
+    SUBDIR += ImageMagick
     SUBDIR += Mesa
 #    SUBDIR += aero
 #    SUBDIR += camediaplay
@@ -23,7 +23,7 @@
 #    SUBDIR += imlib
 #    SUBDIR += jbigkit
     SUBDIR += jpeg
-#    SUBDIR += mpeg-lib
+    SUBDIR += mpeg-lib
 #    SUBDIR += mpeg2codec
 #    SUBDIR += mpeg2play
 #    SUBDIR += mpeg_encode
