--- a/x11/Makefile
+++ b/x11/Makefile
@@ -13,7 +13,7 @@
 #    SUBDIR += blt
 #    SUBDIR += bricons
 #    SUBDIR += camltk41
-#    SUBDIR += ctwm
+    SUBDIR += ctwm
 #    SUBDIR += dclock
 #    SUBDIR += emiclock
 #    SUBDIR += emu
