--- a/devel/ncurses/Makefile
+++ b/devel/ncurses/Makefile
@@ -3,7 +3,7 @@
 # Date created:				Tue Oct 28 00:12:41 CET 1997
 # Whom:					Hubert Feyrer (hubertf@netbsd.org)
 #
-# $NetBSD: Makefile,v 1.6 1997/12/13 04:05:28 hubertf Exp $
+# $NetBSD: Makefile,v 1.7 1997/12/18 09:58:14 hubertf Exp $
 
 DISTNAME=	ncurses-1.9.9g
 WRKSRC=		${WRKDIR}/ncurses_1.9.9g
@@ -15,7 +15,7 @@ MASTER_SITES=	ftp://ftp.fu-berlin.de/unix/gnu/ncurses/
 MAINTAINER=	hubertf@netbsd.org
 
 GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--with-normal --with-shared --enable-bsdpad
+CONFIGURE_ARGS+= --with-normal --with-shared --enable-bsdpad
 
 #MANCOMPRESSED=	yes
 MAN1=		captoinfo.1 infocmp.1 tic.1 toe.1
