--- a/editors/vile/Makefile
+++ b/editors/vile/Makefile
@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.2 1997/10/06 13:03:07 agc Exp $
 # New ports collection makefile for:    vile
-# Version required:     7.2
-# Date created:         Wed Nov 26, 1996
-# Whom:                 pgf
+# Version required:     		7.3
+# Date created:         		Wed Nov 26, 1996
+# Whom:                 		pgf
 #
+# $NetBSD: Makefile,v 1.3 1997/12/19 09:50:07 agc Exp $
 # FreeBSD Id: Makefile,v 1.13 1997/09/06 19:55:09 gj Exp
 #
 
 DISTNAME=	vile
-PKGNAME=	vile-7.2c
+PKGNAME=	vile-7.3
 WRKSRC=		${WRKDIR}/${PKGNAME}
 CATEGORIES=	editors
 MASTER_SITES=   ftp://ftp.clark.net/pub/dickey/vile/ \
